<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    
    <string name="Player_1_label">X</string>
    <string name="Player_2_label">O</string>
    
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="exit">Exit</string>
    <string name="replay">Replay</string>
    <string name="menu">Menu</string>
    <string name="confirm">Confirm</string>
    
    <string name="player_1_mode">1 Player</string>
    <string name="player_2_mode">2 Player</string>
    
    <string name="difficulty_mode">Difficulty</string>
    <string name="easy">E</string>
    <string name="medium">M</string>
    <string name="hard">H</string>
    <string name="wins">W</string>
    <string name="loses">L</string>
    <string name="draws">D</string>
    <string name="turn">Player Turn: </string>

</resources>
