<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd_2"
    tools:context="main.tictactoe.MenuActivity" >
	
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true">
        
		<main.tictactoe.CButton
		    android:id="@+id/newGame_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:background="@drawable/big_button"
		    android:button="@android:color/transparent"
		    android:text="@string/new_game"
		    android:onClick="onClick" />

		<main.tictactoe.CButton
		    android:id="@+id/settings_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/newGame_button"
		    android:layout_centerHorizontal="true"
		    android:background="@drawable/big_button"
		    android:button="@android:color/transparent"
		    android:text="@string/settings"
		    android:onClick="onClick" />

		<main.tictactoe.CButton
		    android:id="@+id/score_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/settings_button"
		    android:layout_centerHorizontal="true"
		    android:background="@drawable/big_button"
		    android:button="@android:color/transparent"
		    android:text="@string/scoreboard"
		    android:onClick="onClick" />
		
	</RelativeLayout>

	<main.tictactoe.CButton
	    android:id="@+id/exit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginBottom="19dp"
	    android:layout_marginRight="16dp"
	    android:background="@drawable/small_button"
		android:button="@android:color/transparent"
		android:text="@string/exit"
		android:onClick="onClick" />

</RelativeLayout>